@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-01-2006 fixed: IMDB thumbs (imdb.com changed their webpage slightly)
+ - 25-01-2006 fixed: My Video "Query Info For All Files" for paths on a disc
  - 25-01-2006 fixed: typo in cachesubtitles. really fixes caching subs 'hangs'.
  - 25-01-2006 added: gui indication when trainers are disabled due to kai.
  - 25-01-2006 fixed: better handling of broken trainers.
